--- a/src/components/SavedActivities/SavedActivities.css
+++ b/src/components/SavedActivities/SavedActivities.css
@@ -66,7 +66,7 @@
 @media screen and (max-width: 600px) {
   .saved-activities__header {
     justify-content: space-between;
-    padding-right: 2rem;
+    margin-right: 2rem;
   }
 
   .saved-activities__title {
