--- a/src/components/SearchActivities/SearchActivities.css
+++ b/src/components/SearchActivities/SearchActivities.css
@@ -85,10 +85,6 @@
     padding: 1rem 0 0 0;
   }
 
-  /* .search-activities__header-with-padding {
-    padding: 0 0 2rem;
-  } */
-
   .search-activities__title {
     font-size: 0.8rem;
   }
